crates/ars-core/tests/ui/has_id_on_tuple_struct.rs
use ars_core::HasId;

#[derive(HasId)]
struct Props(String);

fn main() {}
